ORC-412: [C++] Fix Char(n) and Varchar(n) writers with UTF-8